<resources>
    <string name="app_name">MoonShard</string>
    <string name="auth_threepid_warning_message">Registration with email and phone number at once is not supported yet until the api exists. Only the phone number will be taken into account.\n\nYou may add your email to your profile in settings.</string>
    <string name="auth_add_email_message">"Add an email address to your account to let users discover you, and let you reset password."</string>
    <string name="auth_add_phone_message">"Add a phone number to your account to let users discover you."</string>
    <string name="auth_add_email_phone_message">"Add an email address and/or a phone number to your account to let users discover you.\n\nEmail address will also let you reset your password."</string>
    <string name="auth_add_email_and_phone_message">"Add an email address and a phone number to your account to let users discover you.\n\nEmail address will also let you reset your password."</string>
    <string name="resources_language">en</string>
    <string name="account_email_validation_title">Verification Pending</string>
    <string name="account_email_validation_message">Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_validation_error">Unable to verify email address. Please check your email and click on the link it contains. Once this is done, click continue.</string>
    <string name="account_email_already_used_error">This email address is already in use.</string>
    <string name="account_email_not_found_error">This email address was not found.</string>
    <string name="account_phone_number_already_used_error">This phone number is already in use.</string>
    <string name="account_email_error">An error occurred while verifying your email address.</string>
    <string name="account_phone_number_error">An error occurred while verifying your phone number.</string>
    <string name="login_mobile_device">Mobile</string>
    <string name="account_additional_info">Additional info: %s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="input_companion_username">Input interlocutor\'s JID</string>
    <string name="hint_enter_a_message">Enter message...</string>
    <string name="logout">Log out from account</string>
    <string name="sign_in_button">Sign In</string>
    <string name="invalid_jid_error">Invalid JabberID!</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="clear_chat">Clear chat</string>
    <string name="notification_channel_name">MoonShard Notifications</string>
    <string name="notification_channel_desc">MoonShard chat notifications</string>
    <string name="copied_to_clipboard">Message is copied to clipboard</string>
    <string name="as_list">As list</string>
    <string name="recommendations">Recommendations</string>
    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="events">Events</string>
    <string name="create_chat">Create chat</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="on_the_weekend">Weekend</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snackbar_undo">Undo</string>
    <string name="chatlist_chat_deleted">Chat was deleted</string>
    <string name="change_txt">Change</string>
    <string name="members">Members</string>
    <string name="name">Name</string>
    <string name="user_information_is_not_filled">User information is not filled up</string>
    <string name="no_information_available">No information available</string>
    <string name="meters"> meters</string>
    <string name="km"> Km</string>
    <string name="day">day</string>
    <string name="days234">days</string>
    <string name="days">days</string>
    <string name="a_week">A week</string>
    <string name="select_picture">Select Picture</string>
    <string name="this_app_needs_location_access">This app needs access to your location</string>
    <string name="at">at</string>
    <string name="party">Party</string>
    <string name="business_events">Business Events</string>
    <string name="hobby_group">Hobby group</string>
    <string name="cultural_activities">Cultural activities</string>
    <string name="category">Category:</string>
    <string name="select_date">Select date</string>
    <string name="information_about_you_is_not">Information about you is not filled up</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="you_entered_an_invalid_character">You entered an invalid character</string>
    <string name="server_error_occurred">Server error occurred</string>
    <string name="server_response_timed_out">Server response timed out</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="already_have_an_account_to">Already have an account?</string>
    <string name="administrator_deleted_username_from_chat">Administrator have deleted %s from chat</string>
    <string name="invited_you_to_chat"> invited you to chat</string>
    <string name="you_were_invited_to_chat">You were invited to chat</string>
    <string name="joined_the_chat"> joined the chat</string>
    <string name="deleted_chat"> deleted chat</string>
    <string name="hi">Hi</string>
    <string name="how_are_you">how are you</string>
    <string name="cock">Cock</string>
    <string name="login">Login</string>
    <string name="your_login">Your login</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="or">or</string>
    <string name="password_recovery">Password recovery</string>
    <string name="to_recover_your_password_enter">To recover your password, enter the email address provided during registration.</string>
    <string name="enter_email">Enter Email</string>
    <string name="restore_password">RESTORE PASSWORD</string>
    <string name="register">Register</string>
    <string name="almost_ready">Almost ready!</string>
    <string name="enter_your_name_if_desired">Enter your name if desired and add a profile photo. You can return to this later in the “Settings” menu.</string>
    <string name="you_can_choose_an_avatar">You can choose an avatar</string>
    <string name="edit">Edit</string>
    <string name="want_to_change_your_nickname">Want to change your nickname or \n use this?</string>
    <string name="reset">Reset</string>
    <string name="oleg_petrov">Oleg Petrov</string>
    <string name="creator">Creator</string>
    <string name="search_by_place_or_name">Search by place or name</string>
    <string name="interest_category">Interest Category</string>
    <string name="group_name">Group name</string>
    <string name="info_content_text110">130 m away</string>
    <string name="to_read">To read</string>
    <string name="join">Join</string>
    <string name="about_event">About event</string>
    <string name="start">Start</string>
    <string name="december_13_2019_at_1800">December 13, 2019 at 18:00</string>
    <string name="location">Location</string>
    <string name="parkovaya_street_odintsovo_moscow_region">Parkovaya Street, Odintsovo, Moscow Region</string>
    <string name="about_chat">About chat</string>
    <string name="we_are_drinking_pivas_at">We are drinking pivas at the monument to Griboedov. We drop off a hundred parts for a three-liter boobs!</string>
    <string name="night_party">Night party</string>
    <string name="with_this_it_is_clear">With this it is clear techno in the area, festivals, meat grinder.</string>
    <string name="chatname">ChatName</string>
    <string name="messagetext">MessageText</string>
    <string name="chat_item_text124">14:14</string>
    <string name="chat_item_text125">0</string>
    <string name="chat_map_item_text126">130 m away</string>
    <string name="cuddle_party_17dec">CUDDLE PARTY 17dec</string>
    <string name="hugging_party_december_17_at">Hugging party December 17 at the Gazkolder Club</string>
    <string name="view_group">VIEW GROUP</string>
    <string name="skip">Skip</string>
    <string name="meet_new_people">Meet new people</string>
    <string name="we_have_created_local_geochats"> We have created local geo-chats based on interests, where everyone will find a company for their liking</string>
    <string name="add_admin">Add admin</string>
    <string name="to_invite">To invite</string>
    <string name="username">Username</string>
    <string name="group_chat">Group chat</string>
    <string name="you_can_create_chats_by">You can create chats by category in any location. Any user will be able to join him.</string>
    <string name="create">Create</string>
    <string name="create_event">Create event</string>
    <string name="organize_a_concert_conference_or">Organize a concert, conference or poetry evening. Invite your friends to a birthday, party or meeting</string>
    <string name="your_location">Your location:</string>
    <string name="parkovaya_street_odintsovo_russia">Parkovaya Street, Odintsovo, Russia</string>
    <string name="administrators">Administrators</string>
    <string name="change_profile">Change Profile</string>
    <string name="done">Done</string>
    <string name="kanaevsky">Kanaevsky</string>
    <string name="about_myself">About myself</string>
    <string name="any_details_for_example_age">Any details, for example: age, occupation or city.</string>
    <string name="name_chat">Name chat</string>
    <string name="information">Information</string>
    <string name="chat_info_text153">234 members, 30 online</string>
    <string name="chat_info_text154">130 m away</string>
    <string name="description">Description</string>
    <string name="description_lorem_ipsum">Description lorem impsum</string>
    <string name="notification">Notification</string>
    <string name="add_member">Add member</string>
    <string name="leave_group">Leave group</string>
    <string name="chat_location">Chat location</string>
    <string name="where_will_the_event_take">Where will the event take place?</string>
    <string name="sosnichnaya_street_11k1">Sosnichnaya street, 11k1</string>
    <string name="always_stay_in_touch">Always stay in touch</string>
    <string name="even_if_you_dont_have">Even if you don’t have internet, stay up to date with the latest news and events.</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="title">Title</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="chat_description">Chat Description</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="the_date_of_the_beginning">the date of the beginning</string>
    <string name="december_13th">December 13th</string>
    <string name="event_duration">Event duration</string>
    <string name="ticket_management">Ticket management</string>
    <string name="new_password">New password</string>
    <string name="your_wallet">Your wallet</string>
    <string name="withdraw">Withdraw</string>
    <string name="cash_flow">Cash flow</string>
    <string name="refill">Refill</string>
    <string name="ticket_type">Ticket type</string>
    <string name="enter_type">Enter type</string>
    <string name="explanation">Explanation</string>
    <string name="enter_an_explanation">Enter an explanation</string>
    <string name="cost_">Cost, ₽</string>
    <string name="enter_cost">Enter cost</string>
    <string name="number_of_tickets">Number of tickets</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="save">SAVE</string>
</resources>