<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:elevation="6dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:padding="0dp">

            <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_arrow_back" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ticket_management"
                    android:textColor="#333333"
                    android:textSize="14sp" />

            <TextView
                    android:id="@+id/readyBtn"
                    android:layout_marginEnd="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/done"
                    android:textColor="#0075FF"
                    android:textSize="14sp" />


        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_below="@+id/toolBar"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="9dp"
            android:background="@drawable/layout_settings_bg"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:textColor="#333333"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="entrance_ticket_save_2019"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
                android:textSize="14sp"
                android:textColor="#9B9BB6"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="14dp"
                android:layout_marginStart="9.5dp"
                android:text="@string/ticket_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:textColorHint="#DDDDDD"
                android:hint="@string/enter_type"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginEnd="13dp"
                android:id="@+id/typeEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:maxLength="255"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

        <TextView
                android:visibility="gone"
                android:textSize="14sp"
                android:textColor="#9B9BB6"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="9.5dp"
                android:text="@string/explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:visibility="gone"
                android:textColorHint="#DDDDDD"
                android:hint="@string/enter_an_explanation"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginEnd="13dp"
                android:id="@+id/descriptionEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:maxLength="255"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

        <TextView
                android:textSize="14sp"
                android:textColor="#9B9BB6"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="9.5dp"
                android:text="@string/cost_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:textColorHint="#DDDDDD"
                android:hint="@string/enter_cost"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginEnd="13dp"
                android:id="@+id/priceEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:maxLength="255"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

        <TextView
                android:textSize="14sp"
                android:textColor="#9B9BB6"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="9.5dp"
                android:text="@string/number_of_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:textColorHint="#DDDDDD"
                android:hint="@string/enter_quantity"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginEnd="13dp"
                android:id="@+id/limitEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:maxLength="255"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveBtn"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#0075FF"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</RelativeLayout>
