<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.profile.history.HistoryTransactionFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/white"
            android:elevation="6dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:padding="0dp">

            <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_arrow_back" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/your_wallet"
                    android:textColor="#333333"
                    android:textSize="14sp" />


        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_below="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_settings_bg"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

        <TextView
                android:id="@+id/cashFlowTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/cash_flow"
                android:textColor="#333333"
                android:textSize="14sp" />


        <RelativeLayout
                android:id="@+id/topUpWalletBtn"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_below="@+id/cashFlowTv"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/wallet_button_default">

            <TextView
                    android:id="@+id/topUpWalletTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/refill"
                    android:textColor="#333333"
                    android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/writeOffBtn"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_below="@+id/cashFlowTv"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_toRightOf="@+id/topUpWalletBtn"
                android:background="@drawable/wallet_button_default">

            <TextView
                    android:id="@+id/writeOffTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/withdraw"
                    android:textColor="#333333"
                    android:textSize="14sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topUpWalletBtn" />
    </RelativeLayout>

</RelativeLayout>