<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF6FF"
        android:orientation="vertical"
        tools:context=".ui.activities.auth.LoginActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <ImageView
                        android:layout_marginTop="40dp"
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        android:padding="16dp"
                        android:src="@drawable/ic_logo_small"
                        tools:ignore="VectorDrawableCompat" />

                <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="TODO"
                        android:src="@drawable/ic_text_logo_new" />
            </LinearLayout>

            <TextView
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginTop="75dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/password_recovery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="17sp" />

            <TextView
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="25dp"
                    android:lineSpacingExtra="2sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="#9B9BB6"
                    android:textSize="14sp"
                    android:text="@string/to_recover_your_password_enter"
                    android:layout_gravity="center"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:textColorHint="#9B9BB6"
                    android:id="@+id/editEmail"
                    style="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edittext_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />

            <RelativeLayout
                    android:layout_marginTop="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:textColorHint="#9B9BB6"
                        android:fontFamily="@font/roboto_regular"
                        android:id="@+id/editPassword"
                        style="@style/Theme.MaterialComponents.Light"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />

                <ImageView
                        android:padding="10dp"
                        android:id="@+id/visiblePassBtn"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="31dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_pass_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>


            <Button
                    android:fontFamily="@font/roboto_medium"
                    android:id="@+id/recoveryPassBtn"
                    style="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:text="@string/restore_password"
                    android:textColor="@android:color/background_light"
                    android:textSize="7pt" />

        </LinearLayout>

        <ProgressBar
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:id="@+id/progressBarRecoveryPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>
</ScrollView>